--- a/app/assets/stylesheets/pages/unit_templates/unit_template.scss
+++ b/app/assets/stylesheets/pages/unit_templates/unit_template.scss
@@ -1,6 +1,13 @@
 
 #lesson_planner {
   margin-bottom: 100px;
+  .section-header {
+    font-weight: 500;
+    font-size: 20px;
+    span {
+      font-weight: 300;
+    }
+  }
   .bs-wizard {
     right: 50px !important;
   }
