render basic structure of QuestionAndAnswer section

--- a/app/views/pages/lessons_tool.erb
+++ b/app/views/pages/lessons_tool.erb
@@ -182,6 +182,8 @@
         </a>
     </section> -->
 
+    <%= react_component('LessonsQuestionsAndAnswersApp', props: {})%>
+
     <!-- Only show if user is not logged in  -->
       <% if !current_user %>
         <section class="tool-sign-up">
