style q-and-a section

--- a/app/views/pages/lessons_tool.erb
+++ b/app/views/pages/lessons_tool.erb
@@ -170,17 +170,14 @@
         <a href='https://quillconnect.firebaseapp.com/#/play/lessons/fNAwNLJDkc2T8O5lBeJQwg' target="_blank" class="q-button cta-button bg-white text-lessonspurple">Preview the Lessons</a>
     </section>
 
-    <!-- <section class="tool-testimonial" id="testimonial">
+    <section class="tool-testimonial" id="testimonial">
         <p class='quote'>
-            "It was very useful to see which concepts students needed more help with. It is extremely beneficial if I want to work on grouping students based on skill."
+            “Thanks again for this tool. The length of lessons, the quality of writing, and the immediate feedback make this one of the best tools (and by far the best free tool) I’ve ever had for teaching and practicing grammar with my students.”
         </p>
         <h4 class="q-h4 author">
-            <span>Norma Bonilla,</span> Downtown College Prep
+            <span>Sean Martin,</span> City Neighbors High School
         </h4>
-        <a href="/activities/packs/20" class='q-button text-black'>
-            <span>View My Story</span>
-        </a>
-    </section> -->
+    </section>
 
     <%= react_component('LessonsQuestionsAndAnswersApp', props: {})%>
 
