--- a/client/app/assets/styles/tool-section.scss
+++ b/client/app/assets/styles/tool-section.scss
@@ -956,3 +956,54 @@ $tool-grey: #f8f9f9;
 .need-links {
   display: none;
 }
+
+.q-and-a {
+  background-color: #5aaef6;
+  color: white;
+  padding: 50px 86px;
+  text-align: left;
+  h1 {
+    font-size: 34px;
+    font-weight: 600;
+    text-align: center;
+  }
+  .qa-section {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: solid 1px #5bbefe;
+    &:last-of-type {
+      border-bottom: none;
+    }
+  }
+  .qa {
+    max-width: 1030px;
+    width: 100%;
+  }
+  .question {
+    font-size: 24px;
+    font-weight: 600;
+  }
+  .answer {
+    font-size: 20px;
+    color: #d8edff;
+    a {
+      color: white;
+    }
+  }
+  .expand-or-collapse {
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+  }
+  .support-link {
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 600;
+    display: flex;
+    justify-content: flex-end;
+    i {
+      margin-left: 7px;
+      margin-top: 1px;
+    }
+  }
+}
