--- a/app/views/pages/shared/_tools_anchor_navbar.html.erb
+++ b/app/views/pages/shared/_tools_anchor_navbar.html.erb
@@ -34,7 +34,8 @@
     {name: 'Overview', url: "tools/#{@tool}#overview"},
     {name: 'How It Works', url: "tools/#{@tool}#how-it-works"},
     {name: 'Walkthrough', url: "tools/#{@tool}#walkthrough"},
-    {name: 'Best Practices', url: "tools/#{@tool}#testimonial"}
+    {name: 'Testimonial', url: "tools/#{@tool}#testimonial"},
+    {name: 'Best Practices', url: "tools/#{@tool}#q-and-a"}
     ]
     @mobile = false
   %>
@@ -44,6 +45,13 @@
   </div>
 
   <%
+    @tabs = [
+    {name: 'Overview', url: "tools/#{@tool}#overview"},
+    {name: 'How It Works', url: "tools/#{@tool}#how-it-works-mobile"},
+    {name: 'Walkthrough', url: "tools/#{@tool}#walkthrough"},
+    {name: 'Testimonial', url: "tools/#{@tool}#testimonial"},
+    {name: 'Best Practices', url: "tools/#{@tool}#q-and-a"}
+    ]
     @active_tab = @active_tab.split.last
     @mobile = true
   %>
