update scss links to point to prod cdn

--- a/client/app/assets/styles/tool-section.scss
+++ b/client/app/assets/styles/tool-section.scss
@@ -927,7 +927,7 @@ $tool-grey: #f8f9f9;
 
 .lessons-tool-page {
   .tool-animation-section {
-    background-image: url('http://localhost:8000/assets/images/tools/lessons/lessons_tool_pattern.svg');
+    background-image: url('http://assets.quill.org/assets/images/tools/lessons/lessons_tool_pattern.svg');
     background-position: center;
     background-repeat: no-repeat;
   }
