--- a/app/assets/stylesheets/shared/activity_tables/search_and_select.scss
+++ b/app/assets/stylesheets/shared/activity_tables/search_and_select.scss
@@ -28,6 +28,15 @@
   }
   #search_activities_button {
     margin-right: 15px;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+    width: 36px;
+    height: 40px;
+    padding: 0;
+    background-color: #00c2a2;
+    .fa-search {
+      font-size: 18spx;
+    }
   }
 }
 
