--- a/app/assets/stylesheets/shared/activity_tables/search_and_select.scss
+++ b/app/assets/stylesheets/shared/activity_tables/search_and_select.scss
@@ -24,20 +24,10 @@
     margin-top: 0px;
     margin-bottom: 20px;
     width: 280px;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
+    margin-right: 15px;
   }
   #search_activities_button {
     margin-right: 15px;
-    border-bottom-left-radius: 0;
-    border-top-left-radius: 0;
-    width: 36px;
-    height: 40px;
-    padding: 0;
-    background-color: #00c2a2;
-    .fa-search {
-      font-size: 18spx;
-    }
   }
 }
 
