Increased students attempts needed to move on and added recheck button

--- a/app/styles/components/_student-question.scss
+++ b/app/styles/components/_student-question.scss
@@ -64,7 +64,7 @@
   margin-top: 28px;
 }
 
-.student-submit, .student-next {
+.student-submit, .student-next, .student-recheck {
   background-color: $green;
   font-family: $family-sans-serif;
   color: $white;
