adds lessons icon to tool filters

--- a/app/assets/stylesheets/shared/icons.scss
+++ b/app/assets/stylesheets/shared/icons.scss
@@ -62,6 +62,12 @@
   background-position: center;
   height: 40px;
 }
+.icon-lessons-gray {
+  background-image: url("https://assets.quill.org/images/icons/lessons-dark-gray-icon.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 40px;
+}
 
 .icon-diagnostic-gray {
   background-image: image-url("scorebook/icon-diagnostic-gray.png");
