--- a/app/views/layouts/twenty_seventeen_home.html.erb
+++ b/app/views/layouts/twenty_seventeen_home.html.erb
@@ -27,8 +27,8 @@
                               hot: 'application_non_webpack',
                               media: 'all',
                               'data-turbolinks-track' => true) %>
-   <%= env_javascript_include_tag(hot: ['http://localhost:3500/vendor-bundle.js', 'http://localhost:3500/home-bundle.js', 'http://localhost:3500/app-bundle.js'],
-                                 static: 'home') %>
+   <%= env_javascript_include_tag(hot: ['http://localhost:3500/vendor-bundle.js', "http://localhost:3500/#{@js_file || 'home'}-bundle.js", 'http://localhost:3500/app-bundle.js'],
+                                 static: @js_file || 'home') %>
    <%= csrf_meta_tags %>
    <%= render partial: 'application/head_embed_codes' %>
   </head>
