new admin dashboard scss with becca

--- a/app/assets/stylesheets/pages/admin_dashboard/admin-dashboard.scss
+++ b/app/assets/stylesheets/pages/admin_dashboard/admin-dashboard.scss
@@ -1,9 +1,11 @@
 #admin-dashboard {
 
   .sub-container {
-    margin: 0px -100px;
+    max-width: 950px;
+    margin: 0 auto;
   }
   input {
+    max-width: 150px;
     margin-right: 10px;
   }
   .add-user {
