--- a/app/assets/stylesheets/pages/admin_dashboard/top.scss
+++ b/app/assets/stylesheets/pages/admin_dashboard/top.scss
@@ -1,12 +1,15 @@
 .admin-dashboard-top {
   margin-top: 60px;
-  margin-bottom: 120px;
+  margin-bottom: 40px;
 
   .representative {
-    height: 110px;
     .representative-header {
       font-weight: 700;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
+    }
+
+    .rep-info {
+      margin-bottom: 60px;
     }
 
     .representative-contact {
