--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <div id='application_nav_bar'>
       <%= render partial: 'header', media: 'all', 'data-turbolinks-track' => true %>
     </div>
+    <%= render partial: 'admin_dashboard_header' %>
     <%= yield %>
     <!-- This is a placeholder for ReactOnRails to know where to render the store props for
      client side hydration -->
