--- a/app/assets/stylesheets/pages/admin_dashboard/admin-dashboard-header.scss
+++ b/app/assets/stylesheets/pages/admin_dashboard/admin-dashboard-header.scss
@@ -1,5 +1,9 @@
 #admin-dashboard-header {
   background-color: white;
+  .admin-nav-bar {
+    max-width: 950px;
+    margin: 0 auto;
+  }
   h4 {
     cursor: pointer;
     font-weight: 700 !important;
@@ -14,8 +18,4 @@
     border-top-color: $gray;
     margin: 0px;
   }
-}
-
-#admin-dashboard-header.teacher-dashboard {
-  padding-bottom: 10px;
 }
