WIP rematch all.

--- a/app/styles/components/_student-question.scss
+++ b/app/styles/components/_student-question.scss
@@ -61,7 +61,7 @@
 }
 
 .question-button-group {
-  margin-top: 28px;
+  // margin-top: 28px;
 }
 
 .student-submit, .student-next, .student-recheck {
