--- a/app/styles/components/classroom_lessons/_play_lesson_container.scss
+++ b/app/styles/components/classroom_lessons/_play_lesson_container.scss
@@ -57,8 +57,8 @@
 .student.text-editor.card {
   background-color: #ffffff;
   box-shadow: 0 2px 2px 0 #e9e9e9, 0 0 2px 0 rgba(0, 0, 0, 0.12);
-  width: 98%;
-  margin-left: 1px;
+  // width: 98%;
+  // margin-left: 1px;
   &.disabled-editor {
     background-color: #e9e9e9;
     opacity: 0.5;
