--- a/app/views/layouts/progress_reports.html.erb
+++ b/app/views/layouts/progress_reports.html.erb
@@ -2,7 +2,7 @@
   <%= render partial: 'head' %>
   <body>
     <%= render partial: 'header', media: 'all', 'data-turbolinks-track' => true %>
-
+    <%= render partial: 'admin_dashboard_header' %>
     <%= render partial: 'teachers/shared/scorebook_tabs' %>
     <%= render partial: 'teachers/progress_reports/subnav'%>
         <%= react_component('ProgressReportApp')%>
