adds green border to admin header

--- a/app/assets/stylesheets/pages/admin_dashboard/admin-dashboard-header.scss
+++ b/app/assets/stylesheets/pages/admin_dashboard/admin-dashboard-header.scss
@@ -1,5 +1,6 @@
 #admin-dashboard-header {
   background-color: white;
+  border-bottom: 10px solid #00c2a2;
   .admin-nav-bar {
     max-width: 950px;
     margin: 0 auto;
