--- a/app/views/teachers/shared/_scorebook_tabs.html.erb
+++ b/app/views/teachers/shared/_scorebook_tabs.html.erb
@@ -19,6 +19,12 @@
         <%= link_to "Planner", lesson_planner_teachers_classrooms_path, role: 'tab', class: 'mobile'  %>
       </li>
 
+      <%- if current_user.admin? %>
+        <li class="<%= (action_name == 'administrator') ? 'admin-tab active' : 'admin-tab' %>">
+          <%= link_to raw('Admin Dashboard'), teachers_admin_dashboard_path, role: 'tab' %>
+          <%= link_to 'Admin', teachers_admin_dashboard_path, role: 'tab', class: 'mobile'  %>
+        </li>
+      <% end %>
       <%- unless ((current_user.premium_state == 'paid') || (current_user.premium_state == 'school')) %>
         <li class="<%= (action_name == 'premium') ? 'premium-tab active' : 'premium-tab' %>">
           <%= link_to raw(premium_tab_copy), premium_path, role: 'tab' %>
