blur/disable admin dashboard if teacher does not have subscription

--- a/app/views/application/_admin_dashboard_header.html.slim
+++ b/app/views/application/_admin_dashboard_header.html.slim
@@ -1,4 +1,4 @@
-- if session[:admin_id].present? && session[:viewing_as_admin]
+- if session[:admin_id].present? && session[:user_id] != session[:admin_id]
   #admin-dashboard-header class=(current_user.admin? ? '' : 'teacher-dashboard')
     .admin-nav-bar
       h4
