--- a/app/assets/stylesheets/pages/admin_dashboard/admin-dashboard.scss
+++ b/app/assets/stylesheets/pages/admin_dashboard/admin-dashboard.scss
@@ -1,5 +1,17 @@
 #admin-dashboard {
 
+  .blur {
+    tr {
+      td:nth-of-type(2),td:nth-of-type(3),td:nth-of-type(4), {
+        -webkit-filter: blur(5px);
+       -moz-filter: blur(5px);
+       -o-filter: blur(5px);
+       -ms-filter: blur(5px);
+       filter: blur(5px);
+      }
+    }
+  }
+
   .sub-container {
     max-width: 950px;
     margin: 0 auto;
