--- a/app/styles/components/classroom_lessons/_admin.scss
+++ b/app/styles/components/classroom_lessons/_admin.scss
@@ -4,3 +4,11 @@
     font-size: 18px;
   }
 }
+
+.admin-classroom-lessons-container {
+  .add-new-lesson-form {
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #e3e3e3;
+  }
+}
