--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -365,6 +365,7 @@ textarea.submission {
 
 .admin-container {
   max-width: 960px;
+  width: 100%;
   padding: 15;
   height: calc(100vh - 30px);
   overflow-y: scroll;
