--- a/app/styles/components/classroom_lessons/_admin.scss
+++ b/app/styles/components/classroom_lessons/_admin.scss
@@ -76,6 +76,7 @@
   width: 432px;
   margin-bottom: 25px;
   box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+  overflow: hidden;
   .scaler {
     width: 960px;
     height: 900px;
