--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -123,6 +123,7 @@
       min-width: 253px;
       border-radius: 3px;
       border: solid 1px #e9e9e9;
+      margin-left: 35px;
       .presence-header {
         height: 54px;
         border-bottom: solid 1px #e9e9e9;
@@ -334,7 +335,7 @@
   background-color: #fafafa;
   font-size: 16px;
   line-height: 1.63;
-  margin-right: 35px;
+  margin-bottom: 15px;
   h4 {
     font-weight: 600;
     text-align: left;
