Add title to exit slide

--- a/app/styles/components/classroom_lessons/_teacher_slide_container.scss
+++ b/app/styles/components/classroom_lessons/_teacher_slide_container.scss
@@ -1,4 +1,4 @@
-.teacher-single-answer, .teacher-static {
+.teacher-single-answer, .teacher-static, .teacher-exit {
   .header {
     display: flex;
     justify-content: space-between;
