--- a/app/styles/components/classroom_lessons/_flagged_student_list.scss
+++ b/app/styles/components/classroom_lessons/_flagged_student_list.scss
@@ -2,7 +2,7 @@
   border-radius: 3px;
   border: solid 1px #e9e9e9;
   margin-top: 30px;
-  max-width: 820px;
+  // max-width: 820px;
   .list-summary, .assignment-options-header {
     height: 60px;
     background-color: #fafafa;
@@ -53,7 +53,7 @@
   .assign-option-row {
     padding-left: 30px;
     padding-right: 30px;
-    max-width: 730px;
+    // max-width: 730px;
     min-height: 76px;
     justify-content: space-between;
     &:last-of-type {
