--- a/app/views/pages/lessons_tool.erb
+++ b/app/views/pages/lessons_tool.erb
@@ -20,7 +20,7 @@
     </section>
 
     <section class="tool-animation-section " id="overview">
-      <img class='tool-animation' src=<%= "#{ENV['CDN_URL']}/assets/images/tools/lessons/lessons_tool_animation.svg" %>></img>
+      <video class='tool-animation' src=<%= "#{ENV['CDN_URL']}/assets/videos/tools/lessons.mp4" %> autoplay loop></video>
     </section>
 
     <section class="walk-thru-wrapper desktop" id="how-it-works">
