give slide titles on preview a max width

--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -80,6 +80,8 @@
         line-height: 20px;
         margin-bottom: 10px;
         font-weight: 600;
+        max-width: 300px;
+        width: 100%;
         &.active {
           color: $green;
         }
