--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -12,6 +12,7 @@
 @import 'classroom_lessons/_fill_in_the_blank.scss';
 @import 'classroom_lessons/_teacher_model.scss';
 @import 'classroom_lessons/_absent_teacher.scss';
+@import 'classroom_lessons/_projector_modal.scss';
 
 .teach-lesson-container {
   display: flex;
