downcase illustrations path; change cursor to pointer on exit icon

--- a/app/styles/components/classroom_lessons/_preview_modal.scss
+++ b/app/styles/components/classroom_lessons/_preview_modal.scss
@@ -24,6 +24,7 @@
   text-align: center;
   padding: 40px;
   .exit {
+    cursor: pointer;
     right: 12px;
     top: 12px;
     position: absolute;
@@ -53,6 +54,7 @@
     font-weight: bold;
     border: none;
     margin: 15 0;
+    cursor: pointer;
   }
 
   a {
