--- a/app/assets/stylesheets/shared/icons.scss
+++ b/app/assets/stylesheets/shared/icons.scss
@@ -84,35 +84,35 @@
 }
 
 .icon-puzzle-green {
-  background-image: image-url("scorebook/icon-puzzle-green.svg");
+  background-image: url("http://assets.quill.org/images/scorebook/icon-puzzle-green.svg");
   background-repeat: no-repeat;
   background-position: center;
   height: 40px;
 }
 
 .icon-diagnostic-green {
-  background-image: image-url("scorebook/icon-diagnostic-green.svg");
+  background-image: url("http://assets.quill.org/images/scorebook/icon-diagnostic-green.svg");
   background-repeat: no-repeat;
   background-position: center;
   height: 40px;
 }
 
 .icon-connect-green {
-  background-image: image-url("scorebook/icon-connect-green.svg");
+  background-image: url("http://assets.quill.org/images/scorebook/icon-connect-green.svg");
   background-repeat: no-repeat;
   background-position: center;
   height: 40px;
 }
 
 .icon-flag-green {
-  background-image: image-url("scorebook/icon-flag-green.svg");
+  background-image: url("http://assets.quill.org/images/scorebook/icon-flag-green.svg");
   background-repeat: no-repeat;
   background-position: center;
   height: 40px;
 }
 
 .icon-lessons-green {
-  background-image: image-url("scorebook/icon-lessons-green.svg");
+  background-image: url("http://assets.quill.org/images/scorebook/icon-lessons-green.svg");
   background-repeat: no-repeat;
   background-position: center;
   height: 40px;
