--- a/app/assets/stylesheets/pages/lesson_planner_and_unit_template_editor.scss
+++ b/app/assets/stylesheets/pages/lesson_planner_and_unit_template_editor.scss
@@ -22,6 +22,7 @@
     display: inline-block;
     position: relative;
     width: 100%;
+    padding-bottom: 30px;
     .error-message {
       position: absolute;
       float: left;
