selected activities turn white

--- a/app/assets/stylesheets/shared/activity_tables/activity_table.scss
+++ b/app/assets/stylesheets/shared/activity_tables/activity_table.scss
@@ -22,6 +22,9 @@ table.activity-table {
   }
 
   tbody tr {
+    &.selected {
+      background-color: white;
+    }
     &:first-of-type {
       border-top: none;
     }
