keep tutorial heights consistent

--- a/app/assets/stylesheets/pages/tutorials.scss
+++ b/app/assets/stylesheets/pages/tutorials.scss
@@ -67,6 +67,7 @@
     max-width: 1500;
     width: 100%;
     margin: auto;
+    height: 455px;
     .illustration {
       width: 100%;
       position: relative;
