my activities style updates

--- a/app/assets/stylesheets/pages/my_lessons.scss
+++ b/app/assets/stylesheets/pages/my_lessons.scss
@@ -16,12 +16,14 @@
     }
   }
   #launch-lesson {
+    margin-right: 30px;
     height: 40px;
     color: white;
     font-size: 16px;
     font-weight: bold;
   }
   .lesson-completed {
+    margin-right: 30px;
     color: #82bf3c;
     font-size: 16px;
     font-weight: 600;
