--- a/app/assets/stylesheets/pages/manage-units.scss
+++ b/app/assets/stylesheets/pages/manage-units.scss
@@ -24,6 +24,8 @@
 
   .manage-units-header {
     margin-top: 30px;
+    padding-bottom: 30px;
+    border-bottom: solid 1px #c0c0c0;
     h1 {
       font-size: 24px;
       font-weight: 600;
@@ -75,7 +77,7 @@
     color: #137779;
   }
   .delete-classroom-activity {
-    margin-right: 11px;
+    margin-right: 30px;
   }
   .delete-unit {
     margin-left: auto;
@@ -99,7 +101,7 @@
     }
   }
   .unit-label {
-    margin-top: 30px;
+    margin-top: 12px;
     text-align: left !important;
     border-bottom: none;
     border-top: 1px solid #cecece !important;
@@ -121,15 +123,24 @@
       text-overflow: ellipsis;
       overflow: hidden;
       white-space: nowrap;
+      @media (max-width: 990px) {
+        max-width: 300px;
+      }
+      @media (max-width: 680px) {
+        max-width: 200px;
+      }
     }
   }
   .due-date-header {
-    padding-right: 14.3%;
+    width: 95px;
+    margin-right: 60px;
+    text-align: center;
     float: right;
   }
   .due-date-input {
     text-align: center;
     width: 95px;
+    margin-right: 30px;
   }
   .assigned-activities {
     margin-top: 0 !important;
@@ -168,7 +179,8 @@
       padding: 0;
       margin: 0 !important;
       .cell:first-child {
-        padding-right: 10px;
+        margin-left: 15px;
+        margin-right: 10px;
       }
       .cell:nth-child(2) {
         padding-left: 0;
@@ -201,7 +213,6 @@
     justify-content: flex-start;
     align-items: center;
     div#activity-analysis-activity-name {
-      padding-left: 10px;
       .recommendations-button {
         display: inline-block;
         margin-left: 10px;
@@ -218,7 +229,6 @@
       }
       a, span {
         color: #027360;
-        padding-left: 10px;
         cursor: pointer;
       }
     }
@@ -227,6 +237,5 @@
   @media (min-width: 992px) {
     div#activity-analysis-activity-name {
       width: 100%;
-      padding-left: 30px !important;
     }
   }
