--- a/app/views/teachers/students/index.html.erb
+++ b/app/views/teachers/students/index.html.erb
@@ -17,7 +17,12 @@
                 </div>
                 <div id="class-grade">
                   <%= f.label :grade, class: 'class-grade' %>
-                  <%= f.select :grade, %w(1 2 3 4 5 6 7 8 9 10 11 12 other) %>
+                  <%
+                    # Note to maintainers: if you update the grade options here, please also ensure to do so in the following locations:
+                    #   - /app/bundles/HelloWorld/components/google_classroom/google_classroom_sync/GoogleClassroomsList.jsx
+                    #   - /app/bundles/HelloWorld/containers/CreateClass.jsx
+                  %>
+                  <%= f.select :grade, %w(1 2 3 4 5 6 7 8 9 10 11 12 University Other) %>
                 </div>
                 <%= f.button 'Save Changes',          class: 'button-green' %>
               <% end %>
