adjust size of slide name and number

--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -75,6 +75,7 @@
         }
       }
       .slide-number {
+        width: 300px;
         cursor: pointer;
         color: #c0c0c0;
         font-size: 14px;
