change links on teacher slides to forest green

--- a/app/styles/components/classroom_lessons/_script_items.scss
+++ b/app/styles/components/classroom_lessons/_script_items.scss
@@ -12,7 +12,7 @@
     .show-remaining-students-button, .show-differences-button {
       font-size: 16px;
       font-weight: 600;
-      color: #00c2a2;
+      color: #027360;
       cursor: pointer;
     }
     .show-differences-button {
@@ -75,7 +75,7 @@
           }
           p {
             cursor: pointer;
-            color: #00c2a2;
+            color: #027360;
             margin-top: 5px;
             height: 14px;
           }
@@ -114,7 +114,7 @@
             }
             .student-retry-question {
               cursor: pointer;
-              color: #00c2a2;
+              color: #027360;
               font-size: 20px;
             }
           }
@@ -175,7 +175,7 @@
     }
 
     i, p {
-      color: #00c2a2;
+      color: #027360;
     }
 
     p {
