--- a/app/styles/components/classroom_lessons/_teacher_slide_container.scss
+++ b/app/styles/components/classroom_lessons/_teacher_slide_container.scss
@@ -10,7 +10,8 @@
       }
     }
     p {
-      color: #00c2a2;
+      font-weight: 600;
+      color: #027360;
       cursor: pointer;
       padding-top: 13px;
     }
