--- a/app/views/pages/beta.html
+++ b/app/views/pages/beta.html
@@ -1,7 +1,7 @@
 <div class="container pages-container beta">
     <h1>You Have Beta Access!</h1>
     <p>Thanks for being an active user of Quill! We're excited to share with you early access to our new tools and content.</p>
-    <h3>New Quill Diagnostic Tool</h3>
+    <!-- <h3>New Quill Diagnostic Tool</h3>
     <p>You can now assign the Quill Diagnostic tool. The diagnostic covers vital sentence structure skills and generates a personalized learning plan based on the student’s performance. Easy to read reports help you choose and assign the perfect Quill activities
         to improve your students’ writing.</p>
     <h3>Assign It</h3>
@@ -17,7 +17,7 @@
     <img src="/images/pages/beta/quill_connect.png" alt="Quill Connect" />
     <h3>View Student Reports</h3>
     <p>From the Student Reports screen, click on the "Activity Analysis" option to view student results.</p>
-    <img src="/images/pages/beta/activity_analysis.png" alt="Activity Analysis">
+    <img src="/images/pages/beta/activity_analysis.png" alt="Activity Analysis"> -->
 
 
 </div>
