Style the admin dashboard slightly

--- a/app/views/teachers/admin.html.erb
+++ b/app/views/teachers/admin.html.erb
@@ -1,3 +1,12 @@
-<div id="admin-dashboard" data-id=<%=current_user.id %>>
-  <%= react_component('AdminDashboardApp', props: {id: current_user.id}) %>
+<%= render partial: 'teachers/shared/scorebook_tabs' %>
+	<!-- Tab panes -->
+	<div class="tab-content">
+		<div class="tab-pane active" id="class-manager">
+			<%= render partial: 'teachers/admin/subnav' %>
+        <div id="admin-dashboard" data-id=<%=current_user.id %>>
+          <%= react_component('AdminDashboardApp', props: {id: current_user.id}) %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
