style awaiting-students and assign-recommendations minis

--- a/app/assets/stylesheets/pages/dashboard.scss
+++ b/app/assets/stylesheets/pages/dashboard.scss
@@ -257,7 +257,7 @@
         }
         .gray-underline {
           margin: auto;
-          padding: 16px;
+          padding: 16px 0px;
           width: 280px;
           border-bottom: solid 1px #cecece;
           & + p {
