--- a/app/assets/stylesheets/pages/diagnostic_mini.scss
+++ b/app/assets/stylesheets/pages/diagnostic_mini.scss
@@ -29,6 +29,8 @@
       color: #027360;
       text-decoration: underline;
     }
+  }
+  &.assign-diagnostic, &.awaiting-students {
     p {
       font-size: 16px;
     }
