add assigned section to exit slide

--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -15,6 +15,7 @@
 @import 'classroom_lessons/_admin.scss';
 @import 'classroom_lessons/_projector_modal.scss';
 @import 'classroom_lessons/_preview_modal.scss';
+@import 'classroom_lessons/_assigned_section.scss';
 
 .teach-lesson-container {
   display: flex;
